--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ nav a {
 .by{
     font-size: 8px;
 }
-footer {
+.footer2 {
     background-color: #ffffff;
     padding: 20px;
     font-family: Arial, Helvetica, sans-serif;
@@ -115,7 +115,7 @@ footer {
     position: static
     
 }
-footer {
+.footer2 {
     background-color: #ffffff;
     padding: 20px;
     font-family: Arial, Helvetica, sans-serif;
@@ -166,43 +166,19 @@ footer {
   }
   .footer {
     background-color: #333;
-    color: #fff;
+    color: #000000;
     font-size: 14px;
     padding: 20px;
   }
-  
-  .footer a {
-    color: #fff;
-    text-decoration: none;
+  h4{
+    font-family:'Times New Roman', Times, serif;
+ 
   }
+
   
-  .footer h3 {
-    margin-top: 0;
+
+  h5{
+    font-family: Arial, Helvetica, sans-serif;
   }
-  
-  .footer ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .footer ul li {
-    display: inline-block;
-    margin-right: 20px;
-  }
-  
-  .footer .quick-links {
-    width: 33%;
-    float: left;
-  }
-  
-  .footer .our-services {
-    width: 33%;
-    float: left;
-  }
-  
-  .footer .contact-us {
-    width: 33%;
-    float: left;
-  }
-  
+
+ 
